YUK-19330 : Merge Java 11 changes to Trunk